--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,5 +30,6 @@
 <script src="/js/angular-resource.js"></script>
 <script src="/js/toastr.js"></script>
 <script src="/js/app.js"></script>
+<script src="/js/Captcha.js"></script>
 </body>
 </html>
